Realizar una o más de una tabulación

--- a/TIPOS_DE_DATOS.ipynb
+++ b/TIPOS_DE_DATOS.ipynb
@@ -67,29 +67,17 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-03T19:53:50.917696Z",
-     "start_time": "2025-01-03T19:53:50.913144Z"
+     "end_time": "2025-01-09T17:56:35.053773Z",
+     "start_time": "2025-01-09T17:56:35.039760Z"
     }
    },
    "cell_type": "code",
    "source": [
     "# Caracteres de escape\n",
-    "texto4 = \"Línea 1\\nLínea 2\\nLínea 3\""
+    "texto4 = \"Línea 1\\nLínea 2\\nLínea 3\"\n",
+    "print(texto4)"
    ],
    "id": "308fdffb07adf831",
-   "outputs": [],
-   "execution_count": 17
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-01-03T19:53:52.669820Z",
-     "start_time": "2025-01-03T19:53:52.664196Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "print(texto4)",
-   "id": "e1c5efbfdba0f5f0",
    "outputs": [
     {
      "name": "stdout",
@@ -101,7 +89,39 @@
      ]
     }
    ],
-   "execution_count": 18
+   "execution_count": 1
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-09T18:17:20.732425Z",
+     "start_time": "2025-01-09T18:17:20.432690Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "texto5 = 'Primera parte\\tSegunda parte\\t\\t\\tTercera parte'\n",
+    "print(texto5)"
+   ],
+   "id": "fa3faf2f9e21911",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Primera parte\tSegunda parte\t\t\tTercera parte\n"
+     ]
+    }
+   ],
+   "execution_count": 2
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "7932caeb7deb4847"
   }
  ],
  "metadata": {
