Segundo Tipo de Datos: Numéricos (Números)

--- a/TIPOS_DE_DATOS.ipynb
+++ b/TIPOS_DE_DATOS.ipynb
@@ -126,7 +126,10 @@
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
-   "source": "# Tipo Entero",
+   "source": [
+    "# Tipo Entero\n",
+    "a = 5"
+   ],
    "id": "d123d4989d0cfd2"
   }
  ],
