Tercer Tipo de Datos: Booleanos

--- a/TIPOS_DE_DATOS.ipynb
+++ b/TIPOS_DE_DATOS.ipynb
@@ -122,15 +122,94 @@
    "id": "cb6eaffedcd411b3"
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-09T18:25:28.749353Z",
+     "start_time": "2025-01-09T18:25:28.670637Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "# Tipo Entero\n",
-    "a = 5"
+    "a = 5\n",
+    "type(a)"
    ],
-   "id": "d123d4989d0cfd2"
+   "id": "d123d4989d0cfd2",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "int"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 3
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-09T18:27:41.293895Z",
+     "start_time": "2025-01-09T18:27:41.282863Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# Tipo Decimal\n",
+    "b = 10.78\n",
+    "type(b)"
+   ],
+   "id": "d764ce186825377f",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "float"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 4
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-09T18:30:17.194919Z",
+     "start_time": "2025-01-09T18:30:17.176758Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# Tipo Complejo\n",
+    "c = 5 + 2j\n",
+    "type(c)"
+   ],
+   "id": "7fe9518cf8f30d82",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "complex"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 5
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "3- Booleanos",
+   "id": "1254466ad7b5de4d"
   }
  ],
  "metadata": {
