--- a/VARIABLES.ipynb
+++ b/VARIABLES.ipynb
@@ -21,21 +21,21 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-09T19:39:58.455234Z",
-     "start_time": "2025-01-09T19:39:58.435504Z"
+     "end_time": "2025-01-13T15:58:33.855116Z",
+     "start_time": "2025-01-13T15:58:33.849140Z"
     }
    },
    "cell_type": "code",
    "source": "texto = \"Este es un ejemplo de una variable\"",
    "id": "f8dadb310dc14535",
    "outputs": [],
-   "execution_count": 3
+   "execution_count": 57
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-09T19:39:58.478544Z",
-     "start_time": "2025-01-09T19:39:58.473491Z"
+     "end_time": "2025-01-13T15:58:33.896205Z",
+     "start_time": "2025-01-13T15:58:33.866678Z"
     }
    },
    "cell_type": "code",
@@ -47,13 +47,13 @@
    ],
    "id": "fa1bd0606f9b280d",
    "outputs": [],
-   "execution_count": 4
+   "execution_count": 58
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-09T19:39:58.742569Z",
-     "start_time": "2025-01-09T19:39:58.706708Z"
+     "end_time": "2025-01-13T15:58:33.937883Z",
+     "start_time": "2025-01-13T15:58:33.911740Z"
     }
    },
    "cell_type": "code",
@@ -63,21 +63,21 @@
     {
      "data": {
       "text/plain": [
-       "1916899460560"
+       "2209257014336"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 5
+   "execution_count": 59
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-09T20:01:40.551597Z",
-     "start_time": "2025-01-09T20:01:40.537820Z"
+     "end_time": "2025-01-13T15:58:34.054385Z",
+     "start_time": "2025-01-13T15:58:33.963629Z"
     }
    },
    "cell_type": "code",
@@ -90,21 +90,21 @@
     {
      "data": {
       "text/plain": [
-       "1916898847536"
+       "2209257055152"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 6
+   "execution_count": 60
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-09T20:04:28.204049Z",
-     "start_time": "2025-01-09T20:04:28.191054Z"
+     "end_time": "2025-01-13T15:58:34.092974Z",
+     "start_time": "2025-01-13T15:58:34.085988Z"
     }
    },
    "cell_type": "code",
@@ -117,18 +117,18 @@
        "'ESTE ES UN EJEMPLO DE UNA VARIABLE'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 7
+   "execution_count": 61
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-09T20:04:47.435771Z",
-     "start_time": "2025-01-09T20:04:47.423896Z"
+     "end_time": "2025-01-13T15:58:34.145533Z",
+     "start_time": "2025-01-13T15:58:34.136624Z"
     }
    },
    "cell_type": "code",
@@ -141,18 +141,18 @@
        "'Ejemplo dos de texto'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 8
+   "execution_count": 62
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-09T20:05:39.717348Z",
-     "start_time": "2025-01-09T20:05:39.707940Z"
+     "end_time": "2025-01-13T15:58:34.217563Z",
+     "start_time": "2025-01-13T15:58:34.192771Z"
     }
    },
    "cell_type": "code",
@@ -165,18 +165,18 @@
        "'EJEMPLO DOS DE TEXTO'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 11
+   "execution_count": 63
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-09T20:09:46.781065Z",
-     "start_time": "2025-01-09T20:09:46.773790Z"
+     "end_time": "2025-01-13T15:58:34.321139Z",
+     "start_time": "2025-01-13T15:58:34.309716Z"
     }
    },
    "cell_type": "code",
@@ -189,18 +189,18 @@
        "'este es un ejemplo de una variable'"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 13
+   "execution_count": 64
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-09T20:09:41.973416Z",
-     "start_time": "2025-01-09T20:09:41.966306Z"
+     "end_time": "2025-01-13T15:58:34.389483Z",
+     "start_time": "2025-01-13T15:58:34.379869Z"
     }
    },
    "cell_type": "code",
@@ -213,18 +213,18 @@
        "'ejemplo dos de texto'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 12
+   "execution_count": 65
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-09T20:12:32.313649Z",
-     "start_time": "2025-01-09T20:12:32.307418Z"
+     "end_time": "2025-01-13T15:58:34.482787Z",
+     "start_time": "2025-01-13T15:58:34.427198Z"
     }
    },
    "cell_type": "code",
@@ -237,18 +237,18 @@
        "3"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 15
+   "execution_count": 66
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-09T20:14:01.230750Z",
-     "start_time": "2025-01-09T20:14:01.224751Z"
+     "end_time": "2025-01-13T15:58:34.611292Z",
+     "start_time": "2025-01-13T15:58:34.602698Z"
     }
    },
    "cell_type": "code",
@@ -261,20 +261,136 @@
        "2"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 17
+   "execution_count": 67
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-13T15:58:34.748393Z",
+     "start_time": "2025-01-13T15:58:34.737283Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": "",
-   "id": "502b94aa0ec42903"
+   "source": "texto2.startswith(\"Ejemplo\")",
+   "id": "4fe71f68c03f7387",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 68
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-13T15:58:34.866740Z",
+     "start_time": "2025-01-13T15:58:34.855630Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# Atributos\n",
+    "c = 5 + 2j\n",
+    "type(c)"
+   ],
+   "id": "75aaf7d6ae7df1c",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "complex"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 69
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-13T15:58:34.975028Z",
+     "start_time": "2025-01-13T15:58:34.965704Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "c.real",
+   "id": "e41cb4ac35e890fe",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5.0"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 70
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-13T15:58:35.098873Z",
+     "start_time": "2025-01-13T15:58:35.090725Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "c.imag",
+   "id": "e6a534c62439f583",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.0"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 71
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-13T15:58:35.204713Z",
+     "start_time": "2025-01-13T15:58:35.196984Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "c.conjugate()",
+   "id": "a5fb710caaa79cd7",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(5-2j)"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 72
   }
  ],
  "metadata": {
