Reglas básicas para asignación de variables

--- a/VARIABLES.ipynb
+++ b/VARIABLES.ipynb
@@ -21,21 +21,21 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-13T15:58:33.855116Z",
-     "start_time": "2025-01-13T15:58:33.849140Z"
+     "end_time": "2025-01-13T16:25:19.076701Z",
+     "start_time": "2025-01-13T16:25:19.069484Z"
     }
    },
    "cell_type": "code",
    "source": "texto = \"Este es un ejemplo de una variable\"",
    "id": "f8dadb310dc14535",
    "outputs": [],
-   "execution_count": 57
+   "execution_count": 262
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-13T15:58:33.896205Z",
-     "start_time": "2025-01-13T15:58:33.866678Z"
+     "end_time": "2025-01-13T16:25:19.093034Z",
+     "start_time": "2025-01-13T16:25:19.086888Z"
     }
    },
    "cell_type": "code",
@@ -47,13 +47,13 @@
    ],
    "id": "fa1bd0606f9b280d",
    "outputs": [],
-   "execution_count": 58
+   "execution_count": 263
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-13T15:58:33.937883Z",
-     "start_time": "2025-01-13T15:58:33.911740Z"
+     "end_time": "2025-01-13T16:25:19.121822Z",
+     "start_time": "2025-01-13T16:25:19.111786Z"
     }
    },
    "cell_type": "code",
@@ -63,21 +63,21 @@
     {
      "data": {
       "text/plain": [
-       "2209257014336"
+       "2209257021296"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 264,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 59
+   "execution_count": 264
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-13T15:58:34.054385Z",
-     "start_time": "2025-01-13T15:58:33.963629Z"
+     "end_time": "2025-01-13T16:25:19.163612Z",
+     "start_time": "2025-01-13T16:25:19.151734Z"
     }
    },
    "cell_type": "code",
@@ -90,21 +90,21 @@
     {
      "data": {
       "text/plain": [
-       "2209257055152"
+       "2209262671856"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 265,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 60
+   "execution_count": 265
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-13T15:58:34.092974Z",
-     "start_time": "2025-01-13T15:58:34.085988Z"
+     "end_time": "2025-01-13T16:25:19.210349Z",
+     "start_time": "2025-01-13T16:25:19.198677Z"
     }
    },
    "cell_type": "code",
@@ -117,18 +117,18 @@
        "'ESTE ES UN EJEMPLO DE UNA VARIABLE'"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 266,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 61
+   "execution_count": 266
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-13T15:58:34.145533Z",
-     "start_time": "2025-01-13T15:58:34.136624Z"
+     "end_time": "2025-01-13T16:25:19.275055Z",
+     "start_time": "2025-01-13T16:25:19.264566Z"
     }
    },
    "cell_type": "code",
@@ -141,18 +141,18 @@
        "'Ejemplo dos de texto'"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 267,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 62
+   "execution_count": 267
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-13T15:58:34.217563Z",
-     "start_time": "2025-01-13T15:58:34.192771Z"
+     "end_time": "2025-01-13T16:25:19.361696Z",
+     "start_time": "2025-01-13T16:25:19.349490Z"
     }
    },
    "cell_type": "code",
@@ -165,18 +165,18 @@
        "'EJEMPLO DOS DE TEXTO'"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 268,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 63
+   "execution_count": 268
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-13T15:58:34.321139Z",
-     "start_time": "2025-01-13T15:58:34.309716Z"
+     "end_time": "2025-01-13T16:25:19.457884Z",
+     "start_time": "2025-01-13T16:25:19.446630Z"
     }
    },
    "cell_type": "code",
@@ -189,18 +189,18 @@
        "'este es un ejemplo de una variable'"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 269,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 64
+   "execution_count": 269
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-13T15:58:34.389483Z",
-     "start_time": "2025-01-13T15:58:34.379869Z"
+     "end_time": "2025-01-13T16:25:19.526264Z",
+     "start_time": "2025-01-13T16:25:19.515719Z"
     }
    },
    "cell_type": "code",
@@ -213,18 +213,18 @@
        "'ejemplo dos de texto'"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 270,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 65
+   "execution_count": 270
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-13T15:58:34.482787Z",
-     "start_time": "2025-01-13T15:58:34.427198Z"
+     "end_time": "2025-01-13T16:25:19.622587Z",
+     "start_time": "2025-01-13T16:25:19.610230Z"
     }
    },
    "cell_type": "code",
@@ -237,18 +237,18 @@
        "3"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 271,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 66
+   "execution_count": 271
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-13T15:58:34.611292Z",
-     "start_time": "2025-01-13T15:58:34.602698Z"
+     "end_time": "2025-01-13T16:25:19.718903Z",
+     "start_time": "2025-01-13T16:25:19.707953Z"
     }
    },
    "cell_type": "code",
@@ -261,18 +261,18 @@
        "2"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 272,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 67
+   "execution_count": 272
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-13T15:58:34.748393Z",
-     "start_time": "2025-01-13T15:58:34.737283Z"
+     "end_time": "2025-01-13T16:25:19.792059Z",
+     "start_time": "2025-01-13T16:25:19.780067Z"
     }
    },
    "cell_type": "code",
@@ -285,18 +285,18 @@
        "True"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 273,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 68
+   "execution_count": 273
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-13T15:58:34.866740Z",
-     "start_time": "2025-01-13T15:58:34.855630Z"
+     "end_time": "2025-01-13T16:25:19.855271Z",
+     "start_time": "2025-01-13T16:25:19.843113Z"
     }
    },
    "cell_type": "code",
@@ -313,22 +313,22 @@
        "complex"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 274,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 69
+   "execution_count": 274
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-13T15:58:34.975028Z",
-     "start_time": "2025-01-13T15:58:34.965704Z"
+     "end_time": "2025-01-13T16:25:19.926727Z",
+     "start_time": "2025-01-13T16:25:19.916018Z"
     }
    },
    "cell_type": "code",
-   "source": "c.real",
+   "source": "c.real # Atributo parte Real",
    "id": "e41cb4ac35e890fe",
    "outputs": [
     {
@@ -337,22 +337,22 @@
        "5.0"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 275,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 70
+   "execution_count": 275
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-13T15:58:35.098873Z",
-     "start_time": "2025-01-13T15:58:35.090725Z"
+     "end_time": "2025-01-13T16:25:20.015536Z",
+     "start_time": "2025-01-13T16:25:20.004085Z"
     }
    },
    "cell_type": "code",
-   "source": "c.imag",
+   "source": "c.imag # Atributo parte imaginaria",
    "id": "e6a534c62439f583",
    "outputs": [
     {
@@ -361,22 +361,22 @@
        "2.0"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 276,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 71
+   "execution_count": 276
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-13T15:58:35.204713Z",
-     "start_time": "2025-01-13T15:58:35.196984Z"
+     "end_time": "2025-01-13T16:25:20.118634Z",
+     "start_time": "2025-01-13T16:25:20.105769Z"
     }
    },
    "cell_type": "code",
-   "source": "c.conjugate()",
+   "source": "c.conjugate() # Método conjugada",
    "id": "a5fb710caaa79cd7",
    "outputs": [
     {
@@ -385,12 +385,39 @@
        "(5-2j)"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 277,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 72
+   "execution_count": 277
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "## 2- Algunas reglas Básicas para manipulación de Variables\n",
+    "1. No pueden contener espacios en blanco\n",
+    "2. No pueden contener símbolos (ñ, tildes)\n",
+    "3. Pueden contener números, pero no pueden comenzar con números\n",
+    "4. Pueden contener guiones de piso \" _ \"\n",
+    "5. Ejemplos válidos: registro_01, reg6\n",
+    "6. Ejemplos no válidos: 01_registro, 6reg"
+   ],
+   "id": "b24877ad196f9725"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-13T16:25:20.165314Z",
+     "start_time": "2025-01-13T16:25:20.158602Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "texto_9 = \"tres\"",
+   "id": "22fe1121c5061c4e",
+   "outputs": [],
+   "execution_count": 278
   }
  ],
  "metadata": {
