Reglas básicas para asignación de variables

--- a/VARIABLES.ipynb
+++ b/VARIABLES.ipynb
@@ -402,7 +402,7 @@
     "3. Pueden contener números, pero no pueden comenzar con números\n",
     "4. Pueden contener guiones de piso \" _ \"\n",
     "5. Ejemplos válidos: registro_01, reg6\n",
-    "6. Ejemplos no válidos: 01_registro, 6reg"
+    "6. Ejemplos no válidos: 01_registro, 6reg, registro 89"
    ],
    "id": "b24877ad196f9725"
   },
