Reglas básicas para asignación de variables

--- a/VARIABLES.ipynb
+++ b/VARIABLES.ipynb
@@ -401,8 +401,11 @@
     "2. No pueden contener símbolos (ñ, tildes)\n",
     "3. Pueden contener números, pero no pueden comenzar con números\n",
     "4. Pueden contener guiones de piso \" _ \"\n",
-    "5. Ejemplos válidos: registro_01, reg6\n",
-    "6. Ejemplos no válidos: 01_registro, 6reg, registro 89"
+    "5. Ejemplos válidos: \"registro_01\", \"reg6\"\n",
+    "6. Ejemplos no válidos: \"01_registro\", \"6reg\", \"registro 89\"\n",
+    "7. Python distingue entre Mayúsculas y Minúsculas: \"Registro1\" es diferente de \"registro1\" y diferente de \"REGISTRO1\"\n",
+    "8.  Se debe evitar crear Variables con nombres de funciones de Python o palabras reservadas, por ejemplo: type, id, list, print, entre otras.\n",
+    "9. Los nombres de las variables deben ser descriptivos y al mismo tiempo lo más corto posible. Por ejemplo, si se quiere ingresar los nombres de algunos estudiantes es mejor crear una variable llamada \"nombre_estudiante\" en vez de \"n_s\" o \"es_n\" por ejemplo."
    ],
    "id": "b24877ad196f9725"
   }
